[package]
name = "mastermind_bevy"
version = "0.1.0"
authors = ["Heteau Jonathan <jonathan.heteau@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy =  { version = "0.5.0", features = ["dynamic"] }
bevy_prototype_lyon = "0.3.1"
bevy_mod_debug_console = "0.0.2"
fastrand = "1.5.0"
mastermind = { git = "https://github.com/Jonathan-HETEAU/mastermind_rust.git" }